docs-site/versioned_docs/version-3.6.0/api/enumerations/DriverEnum.md
Defined in: [src/lib/enums/driver.enum.ts:7](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L7)

Enum representing the available pagination driver types

Each driver encapsulates the full format knowledge for both
request building (URI generation) and response parsing.

## Enumeration Members

### DRF

> **DRF**: `"drf"`

Defined in: [src/lib/enums/driver.enum.ts:8](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L8)

***

### JSON\_API

> **JSON\_API**: `"json-api"`

Defined in: [src/lib/enums/driver.enum.ts:9](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L9)

***

### LARAVEL

> **LARAVEL**: `"laravel"`

Defined in: [src/lib/enums/driver.enum.ts:10](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L10)

***

### NESTJS

> **NESTJS**: `"nestjs"`

Defined in: [src/lib/enums/driver.enum.ts:11](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L11)

***

### NESTJSX\_CRUD

> **NESTJSX\_CRUD**: `"nestjsx-crud"`

Defined in: [src/lib/enums/driver.enum.ts:12](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L12)

***

### POSTGREST

> **POSTGREST**: `"postgrest"`

Defined in: [src/lib/enums/driver.enum.ts:13](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L13)

***

### SIEVE

> **SIEVE**: `"sieve"`

Defined in: [src/lib/enums/driver.enum.ts:14](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L14)

***

### SPATIE

> **SPATIE**: `"spatie"`

Defined in: [src/lib/enums/driver.enum.ts:15](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L15)

***

### SPRING

> **SPRING**: `"spring"`

Defined in: [src/lib/enums/driver.enum.ts:16](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L16)

***

### STRAPI

> **STRAPI**: `"strapi"`

Defined in: [src/lib/enums/driver.enum.ts:17](https://github.com/AndreaAlhena/ng-qubee/blob/acd3b62769801d1ae9cef359b58bd5913b0d5720/src/lib/enums/driver.enum.ts#L17)
