docs-site/versioned_docs/version-3.7.0/api/enumerations/DriverEnum.md
Defined in: [src/lib/enums/driver.enum.ts:7](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L7)

Enum representing the available pagination driver types

Each driver encapsulates the full format knowledge for both
request building (URI generation) and response parsing.

## Enumeration Members

### API\_PLATFORM

> **API\_PLATFORM**: `"api-platform"`

Defined in: [src/lib/enums/driver.enum.ts:8](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L8)

***

### DIRECTUS

> **DIRECTUS**: `"directus"`

Defined in: [src/lib/enums/driver.enum.ts:9](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L9)

***

### DRF

> **DRF**: `"drf"`

Defined in: [src/lib/enums/driver.enum.ts:10](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L10)

***

### FEATHERS

> **FEATHERS**: `"feathers"`

Defined in: [src/lib/enums/driver.enum.ts:11](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L11)

***

### JSON\_API

> **JSON\_API**: `"json-api"`

Defined in: [src/lib/enums/driver.enum.ts:12](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L12)

***

### JSON\_SERVER

> **JSON\_SERVER**: `"json-server"`

Defined in: [src/lib/enums/driver.enum.ts:13](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L13)

***

### LARAVEL

> **LARAVEL**: `"laravel"`

Defined in: [src/lib/enums/driver.enum.ts:14](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L14)

***

### NESTJS

> **NESTJS**: `"nestjs"`

Defined in: [src/lib/enums/driver.enum.ts:15](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L15)

***

### NESTJSX\_CRUD

> **NESTJSX\_CRUD**: `"nestjsx-crud"`

Defined in: [src/lib/enums/driver.enum.ts:16](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L16)

***

### ODATA

> **ODATA**: `"odata"`

Defined in: [src/lib/enums/driver.enum.ts:17](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L17)

***

### PAYLOAD

> **PAYLOAD**: `"payload"`

Defined in: [src/lib/enums/driver.enum.ts:18](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L18)

***

### POCKETBASE

> **POCKETBASE**: `"pocketbase"`

Defined in: [src/lib/enums/driver.enum.ts:19](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L19)

***

### POSTGREST

> **POSTGREST**: `"postgrest"`

Defined in: [src/lib/enums/driver.enum.ts:20](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L20)

***

### SIEVE

> **SIEVE**: `"sieve"`

Defined in: [src/lib/enums/driver.enum.ts:21](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L21)

***

### SPATIE

> **SPATIE**: `"spatie"`

Defined in: [src/lib/enums/driver.enum.ts:22](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L22)

***

### SPRING

> **SPRING**: `"spring"`

Defined in: [src/lib/enums/driver.enum.ts:23](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L23)

***

### STRAPI

> **STRAPI**: `"strapi"`

Defined in: [src/lib/enums/driver.enum.ts:24](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L24)

***

### WORDPRESS

> **WORDPRESS**: `"wordpress"`

Defined in: [src/lib/enums/driver.enum.ts:25](https://github.com/AndreaAlhena/ng-qubee/blob/005cbeb73dc9b7703fe7424818735afcf9938d65/src/lib/enums/driver.enum.ts#L25)
